--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+
     <string name="app_name">ProyectoMoviles</string>
+    <string name="facebook_app_id">825940214265187</string>
+    <string name="fb_login_protocol_scheme">fb825940214265187</string>
+
 </resources>
